Fix wrapping on school overview links

--- a/app/frontend/styles/base/_utilities.scss
+++ b/app/frontend/styles/base/_utilities.scss
@@ -23,6 +23,11 @@
   word-wrap:break-word;
 }
 
+.link-wrap {
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
+
 .overflow-scroll {
   @include govuk-media-query($until: tablet) {
     overflow: scroll;
